Add matrix search algorithms and related functions; include input/output files for testing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "bitset": "cpp",
         "set": "cpp",
         "vector": "cpp",
-        "unordered_map": "cpp"
+        "unordered_map": "cpp",
+        "complex": "cpp"
     }
 }
