Add string processing functions and update input/output files; implement longestPalindrome and beautySum functions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "set": "cpp",
         "vector": "cpp",
         "unordered_map": "cpp",
-        "complex": "cpp"
+        "complex": "cpp",
+        "string": "cpp"
     }
 }
