Add linked list implementations and input/output files; include functions for conversion, insertion, deletion, and cycle detection

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "vector": "cpp",
         "unordered_map": "cpp",
         "complex": "cpp",
-        "string": "cpp"
+        "string": "cpp",
+        "new": "cpp"
     }
 }
