--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,9 @@
         "unordered_map": "cpp",
         "complex": "cpp",
         "string": "cpp",
-        "new": "cpp"
+        "new": "cpp",
+        "stack": "cpp",
+        "__config": "cpp",
+        "unordered_set": "cpp"
     }
 }
